                HomGroupPresentation:
            - Now uses size_t instead of unsigned long throughout for
              generator counts and generator indices.
            - The depth argument to GroupPresentation::proliferateRelators()
              is now of type int.
        Class Integer, LargeInteger:
            - New template functions safeValue() and unsafeValue() to assist
              with regina-to-C++ integer conversions.
            - Regarding construction and assignment from native C++ integers:
              instead of many different constructors and assignment operators
              for the different native C++ integer types, there is now a single
              templated constructor and a single templated assignment operator
              to handle _all_ native C++ integer types.  These can also take
              128-bit integers (which were not supported before).
            - Now supports comparisons (equality/inequality and ordering)
              against all native C++ integer types, not just long.
            - Now supports assignment from and comparisons against
              NativeInteger<bytes> (in additional to construction, which was
              already available).
            - Functions that work with NativeInteger<bytes> no longer require
              bytes to be a multiple of sizeof(long).
        Class Isomorphism<dim>:
            - The increment operators are now available in all dimensions
              (not just dimensions ≤ 6).
        Class IsoSigEncodingAPI, IsoSigTypeAPI:
            - New documentation-only classes that explain how encodings and
              signature types for isomorphism signatures are expected to behave.
        Class LargeInteger:
            - See the changes listed under the sister class Integer above.
        Class Laurent<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class LPCol<...>: